# OpenGL-Assessment

./: README.md  local.properties  package-lock.json  package.json
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetection/: EdgeDetector.kt  MainActivity.kt
app/src/main/java/com/example/edgedetection/gl/: GLTextureRenderer.kt
app/src/main/res/layout/: activity_main.xml
public/: index.html
src/: worker-types.d.ts
web/: tsconfig.json  webpack.config.js
web/src/: edge-detection.worker.ts  index.ts  worker-loader.d.ts
